<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation tabs. Item IDs match destination IDs in nav_graph.xml
     so NavigationUI.setupWithNavController() can wire this up automatically. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_opportunities" />

    <item
        android:id="@+id/careersFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_careers" />

    <item
        android:id="@+id/fundingFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_funding" />

    <item
        android:id="@+id/eventsFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_events" />

    <item
        android:id="@+id/savedFragment"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_saved" />

</menu>
